Added excerpt of T-E (Portrait 2) to part 1 of Chapter 2: An Approach to Editing Version T

--- a/chapter2-1.qmd
+++ b/chapter2-1.qmd
@@ -4,3 +4,374 @@ title: "An Approach to Editing Version T, Part 1"
 
 This is the first part of the second chapter of my Quarto book...
 
+
+
+### Excerpt of T-E (Portrait 2, vv.613-702)
+Paris, BnF Arsenal, 3516, ff.115r-115v \
+Digitization available via Gallica [HERE](https://gallica.bnf.fr/ark:/12148/btv1b55000507q/f232.item).
+
+```{r setup, include=FALSE}
+# Load the xml2 package
+library(xml2)
+```
+
+::: {.column-body-outset}
+::: {layout="[[6,6,6]]"}
+
+::: {.column}
+## Minimal
+
+```{r results='asis'}
+# START OF "MINIMAL" CODE
+# Read the XML content
+xml_file <- read_xml("data/T-E.xml")
+
+# Extract both <l>, <cb>, and <pb> elements
+lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
+
+# Initialize an empty list to store the processed lines
+processed_lines <- list()
+
+# Initialize line counter
+line_count <- 0
+# Track if we're within our desired verse range
+in_desired_range <- FALSE
+
+# Function to process each element
+process_line <- function(line) {
+  
+  # Only increment line count for verse lines
+  if (xml_name(line) == "l") {
+    line_count <<- line_count + 1
+    
+    # Check if we're in the desired range (verses 613-702)
+    if (line_count >= 613 && line_count <= 702) {
+      in_desired_range <<- TRUE
+    } else {
+      in_desired_range <<- FALSE
+      return(NULL) # Skip lines outside our range
+    }
+    
+    # Add line number div every 5th line
+    line_number <- if (line_count %% 5 == 0) {
+      sprintf("<div class='line-number'>%d</div>", line_count)
+    } else {
+      ""
+    }
+  } else {
+    line_number <- ""
+    # For non-line elements, if we're not in range, skip them
+    if (!in_desired_range) {
+      return(NULL)
+    }
+  }
+  
+  # Process emph elements (decorative initials)
+  emph_elements <- xml_find_all(line, ".//emph")
+  for (emph in emph_elements) {
+    # Get the initial letter text
+    initial_letter <- xml_text(emph)
+    
+    # Get the size attribute (n) and style attribute (rend)
+    size_attr <- xml_attr(emph, "n")
+    style_attr <- xml_attr(emph, "rend")
+    
+    # Create the HTML for the styled initial
+    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
+                             style_attr, size_attr, initial_letter)
+    
+    # Replace the emph element with the styled HTML
+    xml_text(emph) <- styled_initial
+  }
+  
+  # Find all <choice> elements within the line
+  choices <- xml_find_all(line, ".//choice")
+  for (choice in choices) {
+    # Extract the text from the <orig> tag
+    orig_text <- xml_text(xml_find_first(choice, ".//orig"))
+    # Remove the <choice> element and replace it with the text from the <orig> tag
+    xml_set_text(choice, paste0(orig_text, " "))
+  }
+  
+  # Now we want to remove any <reg> elements entirely
+  reg_elements <- xml_find_all(line, ".//reg")
+  xml_remove(reg_elements)
+  
+  # Replace <lb/> tags with HTML line break
+  lb_elements <- xml_find_all(line, ".//lb")
+  for (lb in lb_elements) {
+    xml_set_text(lb, "")
+  }
+  
+  # Return line with number if applicable
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+              line_number, xml_text(line)))
+}
+
+# Process each line and wrap with <div class='column-break'> at each <cb/>
+for (line in lines) {
+  processed_line <- process_line(line)
+  if (!is.null(processed_line)) {
+    if (xml_name(line) == "cb" && in_desired_range) {
+      # Add a closing </div> for the previous column and an opening <div> for the new column
+      processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
+    } else {
+      # Process the line and add it to the current column
+      processed_lines <- c(processed_lines, processed_line)
+    }
+  }
+}
+
+# Process lines and wrap in edition-text div
+formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
+cat(formatted_text)
+
+```
+
+:::
+
+::: {.column}
+## Intermediate
+
+```{r results='asis'}
+# START OF "INTERMEDIATE" CODE
+# Read the XML content
+xml_file <- read_xml("data/T-E.xml")
+
+# Extract the <l>, <cb>, and <pb> elements inside the <text> element
+lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
+
+# Initialize an empty list to store the processed lines
+processed_lines <- list()
+
+# Initialize line counter
+line_count <- 0
+# Track if we're within our desired verse range
+in_desired_range <- FALSE
+
+# Function to process each element
+process_line <- function(line) {
+  
+  # Only increment line count for verse lines
+  if (xml_name(line) == "l") {
+    line_count <<- line_count + 1
+    
+    # Check if we're in the desired range (verses 613-702)
+    if (line_count >= 613 && line_count <= 702) {
+      in_desired_range <<- TRUE
+    } else {
+      in_desired_range <<- FALSE
+      return(NULL) # Skip lines outside our range
+    }
+    
+    # SPECIAL CASE: Hard-code line v.646 to remove apostrophe in "qu'il"
+    if (line_count == 646) {
+      return("<div style='line-height: 1.2;'>Nient plus quil est en .i. gans</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.650 to remove apostrophe in "qu'ele"
+    if (line_count == 650) {
+      return("<div style='line-height: 1.2;'>asdens les ront quele ot trencans</div>")
+    }
+    
+    # Add line number div every 5th line
+    line_number <- if (line_count %% 5 == 0) {
+      sprintf("<div class='line-number'>%d</div>", line_count)
+    } else {
+      ""
+    }
+  } else {
+    line_number <- ""
+    # For non-line elements, if we're not in range, skip them
+    if (!in_desired_range) {
+      return(NULL)
+    }
+  }
+  
+  # Process emph elements (decorative initials)
+  emph_elements <- xml_find_all(line, ".//emph")
+  for (emph in emph_elements) {
+    # Get the initial letter text
+    initial_letter <- xml_text(emph)
+    
+    # Get the size attribute (n) and style attribute (rend)
+    size_attr <- xml_attr(emph, "n")
+    style_attr <- xml_attr(emph, "rend")
+    
+    # Create the HTML for the styled initial
+    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
+                             style_attr, size_attr, initial_letter)
+    
+    # Replace the emph element with the styled HTML
+    xml_text(emph) <- styled_initial
+  }
+  
+  # Find all <choice> elements within the line
+  choices <- xml_find_all(line, ".//choice")
+  for (choice in choices) {
+    # Check if the <choice> element contains <abbr> and <expan>
+    abbr_exists <- xml_find_first(choice, ".//abbr")
+    expan_exists <- xml_find_first(choice, ".//expan")
+    
+    if (!is.na(abbr_exists) && !is.na(expan_exists)) {
+      # If <abbr> and <expan> tags exist, extract only the <reg> text from <expan>
+      reg_text <- xml_text(xml_find_first(choice, ".//expan/reg"))
+      xml_set_text(choice, paste0(reg_text, " "))
+    } else {
+      # For non-abbreviation choices, keep original behavior
+      orig_text <- xml_text(xml_find_first(choice, ".//orig"))
+      xml_set_text(choice, paste0(orig_text, " "))
+    }
+  }
+  
+  # Now we want to remove any <reg> elements entirely
+  reg_elements <- xml_find_all(line, ".//reg")
+  xml_remove(reg_elements)
+  
+  # Replace <lb/> tags with HTML line break
+  lb_elements <- xml_find_all(line, ".//lb")
+  for (lb in lb_elements) {
+    xml_set_text(lb, "")
+  }
+  
+  # Return line with number if applicable
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+              line_number, xml_text(line)))
+}
+
+# Process each line and wrap with <div class='column-break'> at each <cb/>
+for (line in lines) {
+  processed_line <- process_line(line)
+  if (!is.null(processed_line)) {
+    if (xml_name(line) == "cb" && in_desired_range) {
+      # Add a closing </div> for the previous column and an opening <div> for the new column
+      processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
+    } else {
+      # Process the line and add it to the current column
+      processed_lines <- c(processed_lines, processed_line)
+    }
+  }
+}
+
+# Process lines and wrap in edition-text div
+formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
+cat(formatted_text)
+
+```
+
+:::
+
+::: {.column}
+## Extensive
+
+```{r results='asis'}
+# START OF "EXTENSIVE" CODE
+# Read the XML content
+xml_file <- read_xml("data/T-E.xml")
+
+# Extract the <l>, <cb>, and <pb> elements inside the <text> element
+lines <- xml_find_all(xml_file, "//text//l | //text//cb | //text//pb")
+
+# Initialize an empty list to store the processed lines
+processed_lines <- list()
+
+# Initialize line counter
+line_count <- 0
+# Track if we're within our desired verse range
+in_desired_range <- FALSE
+
+# Function to process each element
+process_line <- function(line) {
+  
+  # Only increment line count for verse lines
+  if (xml_name(line) == "l") {
+    line_count <<- line_count + 1
+    
+    # Check if we're in the desired range (verses 613-702)
+    if (line_count >= 613 && line_count <= 702) {
+      in_desired_range <<- TRUE
+    } else {
+      in_desired_range <<- FALSE
+      return(NULL) # Skip lines outside our range
+    }
+    
+    # Add line number div every 5th line
+    line_number <- if (line_count %% 5 == 0) {
+      sprintf("<div class='line-number'>%d</div>", line_count)
+    } else {
+      ""
+    }
+  } else {
+    line_number <- ""
+    # For non-line elements, if we're not in range, skip them
+    if (!in_desired_range) {
+      return(NULL)
+    }
+  }
+  
+  # Process emph elements (decorative initials)
+  emph_elements <- xml_find_all(line, ".//emph")
+  for (emph in emph_elements) {
+    # Get the initial letter text
+    initial_letter <- xml_text(emph)
+    
+    # Get the size attribute (n) and style attribute (rend)
+    size_attr <- xml_attr(emph, "n")
+    style_attr <- xml_attr(emph, "rend")
+    
+    # Create the HTML for the styled initial
+    styled_initial <- sprintf('<span class="decorative-initial %s" data-size="%s">%s</span>', 
+                             style_attr, size_attr, initial_letter)
+    
+    # Replace the emph element with the styled HTML
+    xml_text(emph) <- styled_initial
+  }
+  
+  # Now we want to remove any <orig> elements entirely
+  orig_elements <- xml_find_all(line, ".//orig")
+  xml_remove(orig_elements)
+  
+  # Find all <choice> elements within the line
+  choices <- xml_find_all(line, ".//choice")
+  for (choice in choices) {
+    # Extract the text from the <reg> tag
+    reg_text <- xml_text(xml_find_first(choice, ".//reg"))
+    # Replace the <choice> element with the text from the <reg> tag
+    xml_set_text(choice, paste0(" ", reg_text, " "))
+  }
+  
+  # Replace <lb/> tags with HTML line break
+  lb_elements <- xml_find_all(line, ".//lb")
+  for (lb in lb_elements) {
+    xml_set_text(lb, "")
+  }
+  
+  # Return line with number if applicable
+  return(sprintf("<div style='line-height: 1.2;'>%s%s</div>", 
+              line_number, xml_text(line)))
+}
+
+# Process each line and wrap with <div class='column-break'> at each <cb/>
+for (line in lines) {
+  processed_line <- process_line(line)
+  if (!is.null(processed_line)) {
+    if (xml_name(line) == "cb" && in_desired_range) {
+      # Add a closing </div> for the previous column and an opening <div> for the new column
+      processed_lines <- c(processed_lines, "</div>", "<div class='column-break'>")
+    } else {
+      # Process the line and add it to the current column
+      processed_lines <- c(processed_lines, processed_line)
+    }
+  }
+}
+
+# Process lines and wrap in edition-text div
+formatted_text <- paste(c("<div class='edition-text'>", processed_lines, "</div>"), collapse = "\n")
+cat(formatted_text)
+
+```
+
+:::
+
+::: :::
+
